--- a/gb/nf4514.md
+++ b/gb/nf4514.md
@@ -2,6 +2,8 @@
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/14/n12752987.md#1" target="_blank">蓬佩奥促拜登：应像川普那样直面对抗中共</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/14/n12752987.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/465397-320x200.jpg" align ="left"></a>美国前国务卿蓬佩奥表示，拜登政府必须像前任川普政府一样直面对抗中共。共和党参议员也敦促拜登充分理解中共所构成的威胁，尽早对抗中共。
 
 上周五（2月12日）.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月15日 10:24 AM					</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/9/n12741687.md#1" target="_blank">【思想领袖】林赛：列宁主义4.0美国上演？</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/9/n12741687.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/download-24-150x120.jpg" align ="left"></a>“这些画面简直不可思议，以前从未见过。”11月6日对国会山庄的攻击令人震惊，随后发生大规模的审查和社交媒体封杀事件，包括对川普总统的封杀，他们说这是为了防止防止暴力。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月15日 9:30 AM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/14/n12752600.md#1" target="_blank">乱世中回归正统 法轮功学员家属感恩李洪志师父</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/14/n12752600.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/2021-2-13-2102010626168064-150x120.jpg" align ="left"></a>2021年中国传统新年到来之际，在法轮功中受益的家族纷纷感谢李洪志大师的恩德，并恭祝新年快乐。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月15日 9:10 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/14/n12752923.md#1" target="_blank">英国会委员会：必须禁止中共投资国防供应链</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/14/n12752923.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/GettyImages-1260116331-150x120.jpg" align ="left"></a>英国国会的国防专责委员会（Defence Select Committee）周日（2月14日）表示，来自中国等敌对国家的投资对英国的国家安全构成风险，应禁止其对英国国防供应链的投资。该委员会在报告中特别提到对中共投资的担忧。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月15日 6:42 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/14/n12752808.md#1" target="_blank">毅力号漫游车将登陆火星 面临“恐怖七分钟”</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/14/n12752808.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/000_8XC88C-150x120.jpg" align ="left"></a>美国宇航局（NASA）“毅力号”火星漫游车将于2月18日在火星一个陨石坑底部着陆。据悉，“毅力”号在登陆火星过程中将经历“恐怖7分钟”，承受高达1300摄氏度高温。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月15日 6:19 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/14/n12752730.md#1" target="_blank">病毒未被实验室蓄意使用？ 世卫说辞引质疑</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/14/n12752730.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/GettyImages-1231058175-150x120.jpg" align ="left"></a>世卫组织专家组组长恩巴瑞克抛出病毒“非常不可能”由实验室泄漏受广泛质疑后，他日前又宣称的“新冠病毒没有被实验室蓄意使用”的说法，也遭质疑。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月15日 5:19 AM							</td></tr>
@@ -34,7 +36,5 @@
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/12/n12749457.md#1" target="_blank">【重播】弹劾审讯第4天 川普律师团队抗辩</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/12/n12749457.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/GettyImages-1301645228-150x120.jpg" align ="left"></a>美东时间周五（12日），美国参议院对前任总统唐纳德?川普（特朗普）的弹劾审判进行到第四天，中午12点，川普律师团队开始陈词抗辩。新唐人、大纪元将联合对此进行直播（中文同声翻译）。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月13日 5:13 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/12/n12749639.md#1" target="_blank">新年团拜会 年轻男子环坐习近平四周引猜疑</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/12/n12749639.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/eb08f12bf8c431b67e83c27ebc8815b6-150x120.jpg" align ="left"></a>中国黄历除夕前一天（2月10日），中共当局举行团拜会时，多年年轻男子围坐在习近平等8名高层坐的主桌四周。外界质疑他们是中南海保镖，预防四周其他人，这折射出中共高层你死我活的权斗以及互相猜疑。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月13日 5:02 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/1/n12725518.md#1" target="_blank">组图：50多国法轮功学员新年感恩李洪志师父</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/1/n12725518.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/5c4c13447385695e9124a92d52d967f4-600x400-1-150x120.jpg" align ="left"></a>“苍穹法正佛光照，师父慈悲洪恩浩。弟子助师救众生，归航满载通天道。”法轮功洪传于世29年，在新的一年来临之时，海外法轮功学员恭祝李洪志师父过年好。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月13日 4:37 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/12/n12749325.md#1" target="_blank">【名家专栏】美国真正敌人是渗透内部的中共</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/12/n12749325.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/GettyImages-1227754679-150x120.jpg" align ="left"></a>美国前国务卿蓬佩奥最近警告说，如果拜登政府的对华政策失误的话，我们的处境将会变得“很不一样”。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月13日 3:53 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/12/n12748710.md#1" target="_blank">【疫情2.12】纽约州承认隐瞒养老院死亡人数</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/12/n12748710.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/GettyImages-1213726641-150x120.jpg" align ="left"></a>据约翰?霍普金斯大学的统计数据，截至美东时间周五（2月12日）凌晨2:23，全球的中共病毒（武汉肺炎、COVID-19）病例总数超过1.07亿（107,787,428）例，死亡人数近237万（2,368,807）例。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月13日 2:30 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf4514.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf4514_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf4514_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf4514_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf4514_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf4514_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf4514_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf4514_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf4514_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf4514_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf4514_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/yrsmsb310/djy/blob/master/gb/nf4514.md#1<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf4514.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yrsmsb310/djy/blob/master/gb/nf4514.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf4514.htm">https://www.epochtimes.com/gb/nf4514.htm</a>    （国内需<a href="https://github.com/yrsmsb310/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
